1792 - add HTML/CSS to ensure "Online Project Team Meetings" button wraps text within the mobile view of the "Events" page (#1813)

--- a/_sass/components/_events.scss
+++ b/_sass/components/_events.scss
@@ -432,6 +432,10 @@
     font-weight: bolder;
     font-size: 24px;
   }
+
+  .event-title span span {
+    display: block;
+  }
   .active::after {
     content: "\221F";
     transform: rotate(135deg);
